--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -23,6 +24,7 @@
         android:label="Aegis"
         android:supportsRtl="true"
         android:theme="@style/Theme.Aegis.Launch"
+        android:usesCleartextTraffic="true"
         tools:replace="android:theme">
         <activity android:name=".ui.TransferEntriesActivity"
             android:label="@string/title_activity_transfer" />
@@ -73,6 +75,9 @@
         <activity
             android:name=".ui.PreferencesActivity"
             android:label="@string/title_activity_preferences" />
+        <activity
+            android:name=".ui.linked.LinkedBrowsersActivity"
+            android:label="@string/title_activity_linked_browsers" />
         <activity
             android:name=".ui.SlotManagerActivity"
             android:label="@string/title_activity_manage_slots" />
