--- a/app/build.gradle
+++ b/app/build.gradle
@@ -187,4 +187,8 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.6.1'
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation 'com.google.firebase:firebase-messaging'
+
 }
